# sjpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_and_test.yml  build_docs.yml
app/: App.cpp  CMakeLists.txt  main.cpp
cmake/: Config.cmake.in
docs/: CMakeLists.txt  index.html  mainpage.dox
examples/: CMakeLists.txt  cli.cpp
include/sjpp/: sjpp.hpp  types.hpp
src/: CMakeLists.txt  Parser.cpp  Parser.hpp  sjpp.cpp
test/: CMakeLists.txt  api_test.cpp  kruk.html  parser_test.cpp
